2013-09-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_hosts.c (ipv4_mapped_ipv6, openvas_host_addr6): New
	functions.

	* base/openvas_hosts.h: Add openvas_host_addr6 function prototype.

2013-09-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* COPYING: Add license for new files.

2013-09-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Initial commit for new Hosts API that will replace hg module.

	* base/openvas_hosts.c, base/openvas_hosts.c: New files.

	* base/CMakeLists.txt: Add new files to build process.

2013-08-29  Michael Wiegand <michael.wiegand@greenbone.net>

	* COPYING: Update date to reflect the latest change.

2013-08-22  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_xref): Conform to coding style.

2013-08-22  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* nasl/nasl.c (main): Document obligatory command line argument
	and clarify that multiple can be given (in error message when none is
	passed).

2013-08-22  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_xref, script_tag): Use nasl_perror
	to print the NVT name, verbose debugging messages when parameters
	are not set.

2013-08-22  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_xref, script_tag): Make error message
	more descriptive by printing the NVT name.

2013-08-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Updated reference system from Debian 6 to 7.

2013-08-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* hg/hosts_gatherer.h: Fix comment typo.

2013-07-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Adding capability to NASL to run commands on a remote Windows
	machine when being authenticated. Similar like it is already
	possible to run commands on remote Linux systems using ssh.
	These patches were developed by Thanga Prakash <tprakash@secpod.com>.
